# argu

./: CMakeLists.txt  LICENSE  README.md
include/: argu.hpp
source/: argu.cc  main.cc
test/: test.cc
